# icestorm-bin

./: .buildinfo  .gitignore  README.md  build-inputs.yaml  building.html  components.html  genindex.html  index.html  installation.html  ivpm.yaml  objects.inv  overview.html  search.html  searchindex.js
.doctrees/: building.doctree  components.doctree  environment.pickle  index.doctree  installation.doctree  overview.doctree
.github/workflows/: ci.yml
.github/workflows-legacy/: ci.yml
_sources/: index.rst.txt
cmake/: CMakeLists.txt  gen_timings.cmake
compat/: getopt.c  getopt.h  unistd.h
compat/sys/: time.h
docs/: building.rst  components.rst  conf.py  installation.rst  overview.rst
scripts/: build-local.sh  build-windows.ps1  build.sh  skill-manifest.yaml  stage-skills.py
skills/icestorm/: SKILL.md
skills/icestorm/examples/01-pack/: README.md  blinky.pcf  blinky.v  run.sh
skills/icestorm/examples/02-program/: README.md  run.sh
skills/icestorm/references/: cli-cheatsheet.md  docs-index.md  error-recipes.md
